2d slicing, library installation, matplotlib, numpy

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -936,7 +936,7 @@
     }
    ],
    "source": [
-    "#6\n",
+    "#6 error\n",
     "filename = ['file1.img', 'file2.img', 'file3.img', 'file4.jpg', 'file5.jpg', 'file6.jpg']\n",
     "for element in filename:\n",
     "    if element.endswith('.jpg'):\n",
@@ -946,12 +946,290 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "nested_list = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "print(nested_list[-1][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#8\n",
+    "num = [1,2,2,3,4,5,5,5,3,6]\n",
+    "num_set = set(num)\n",
+    "num_list = list(num_set)\n",
+    "print(num_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "srishti\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9\n",
+    "name = ['omi','om','shiv','srishti','khushi']\n",
+    "long = ''\n",
+    "for each in name:\n",
+    "    if len(each) > len(long):\n",
+    "        long = each\n",
+    "print(long)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "184\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10\n",
+    "number = [34,43,5,65,11,90,12,2,46,77]\n",
+    "total = 0\n",
+    "for every in number:\n",
+    "    if every % 2 == 0:\n",
+    "        total = total + every\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 67, 89, 54, 34, 11, 90, 12, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11\n",
+    "data = [45,67,89,54,42,34,11,90,12,2]\n",
+    "item = int(input(\"Enter the position of the number to be removed: \"))\n",
+    "data.pop(item)\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ayushshreyamansiomiom\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12\n",
+    "names = ['ayush','shreya','mansi','omi','om']\n",
+    "final_str = ''.join(names)\n",
+    "print(final_str)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[54], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#13 error\u001b[39;00m\n\u001b[0;32m      2\u001b[0m data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m89\u001b[39m,\u001b[38;5;241m54\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m34\u001b[39m,\u001b[38;5;241m11\u001b[39m,\u001b[38;5;241m90\u001b[39m,\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m2\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m l \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m l \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      5\u001b[0m     median \u001b[38;5;241m=\u001b[39m (l\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "#13 error\n",
+    "data = [45,67,89,54,42,34,11,90,12,2]\n",
+    "l = len(data)\n",
+    "if l % 2 == 0:\n",
+    "    median = (l+1)//2\n",
+    "else:\n",
+    "    median = (l//2)+((l//2)+1)\n",
+    "print(data(median))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['om', 'omi', 'mansi', 'shreya', 'ayush']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14\n",
+    "names.reverse()\n",
+    "print(names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[51], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m list_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m85\u001b[39m,\u001b[38;5;241m66\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m14\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m list_num:\n\u001b[1;32m----> 4\u001b[0m     avg \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(data) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(avg)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "#15 error\n",
+    "list_num = [12,23,45,67,85,66,42,23,45,14]\n",
+    "for value in list_num:\n",
+    "    avg = sum(data) / len(data)\n",
+    "print(avg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#16\n",
+    "list_num = [12,23,45,67,85,66,42,23,45,14]\n",
+    "print(list_num.index(67))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ram', 'sita', 'ravaan', 'war of lanka', 'immortals of meluha']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17\n",
+    "str = [' ram',' sita  ','ravaan','war of lanka ',' immortals of meluha']\n",
+    "new_str = []\n",
+    "for el in str:\n",
+    "    new_str.append(el.strip())\n",
+    "print(new_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[85, 67, 66, 45, 45, 42, 23, 23, 14, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#18\n",
+    "list_num.sort(reverse = True)\n",
+    "print(list_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 85, 67, 66, 45, 45, 42, 23, 23, 14, 12]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#19\n",
+    "num = int(input(\"Enter a number: \"))\n",
+    "list_num.insert(0,num)\n",
+    "print(list_num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#7\n",
-    "nested_list = [[1,2,3],[4,5,6],[7,8,9]]\n"
+    "#20\n"
    ]
   }
  ],
