matplotlib plot, bar, hist, scatter, pie, subplots

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -924,24 +924,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['file1.img', 'file2.img', 'file3.img', 'file5.jpg']\n"
+      "['file1.img', 'file2.img', 'file3.img']\n"
      ]
     }
    ],
    "source": [
     "#6 error\n",
     "filename = ['file1.img', 'file2.img', 'file3.img', 'file4.jpg', 'file5.jpg', 'file6.jpg']\n",
-    "for element in filename:\n",
-    "    if element.endswith('.jpg'):\n",
-    "        filename.remove(element)\n",
-    "print(filename)"
+    "f = lambda i: i.endswith('.img')\n",
+    "clean_name = list(filter(f,filename))\n",
+    "print(clean_name)"
    ]
   },
   {
@@ -1073,30 +1072,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[54], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#13 error\u001b[39;00m\n\u001b[0;32m      2\u001b[0m data \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m89\u001b[39m,\u001b[38;5;241m54\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m34\u001b[39m,\u001b[38;5;241m11\u001b[39m,\u001b[38;5;241m90\u001b[39m,\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m2\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m l \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m l \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      5\u001b[0m     median \u001b[38;5;241m=\u001b[39m (l\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
      ]
     }
    ],
    "source": [
-    "#13 error\n",
+    "#13\n",
     "data = [45,67,89,54,42,34,11,90,12,2]\n",
-    "l = len(data)\n",
-    "if l % 2 == 0:\n",
-    "    median = (l+1)//2\n",
+    "if len(data) % 2 == 0:\n",
+    "    median = (len(data)+1)//2\n",
     "else:\n",
-    "    median = (l//2)+((l//2)+1)\n",
-    "print(data(median))"
+    "    median = (len(data)//2)+((len(data)//2)+1)\n",
+    "print(data[median])"
    ]
   },
   {
@@ -1120,23 +1114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'int' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[51], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m list_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m85\u001b[39m,\u001b[38;5;241m66\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m14\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m value \u001b[38;5;129;01min\u001b[39;00m list_num:\n\u001b[1;32m----> 4\u001b[0m     avg \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msum\u001b[39m(data) \u001b[38;5;241m/\u001b[39m \u001b[38;5;28mlen\u001b[39m(data)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(avg)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44.6\n"
      ]
     }
    ],
    "source": [
-    "#15 error\n",
+    "#15\n",
     "list_num = [12,23,45,67,85,66,42,23,45,14]\n",
     "for value in list_num:\n",
     "    avg = sum(data) / len(data)\n",
@@ -1225,11 +1215,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 23, 34, 43, 32, 21, 56, 65, 90, 10, 10, 45, 65, 78, 90, 99, 37, 83, 92, 21]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20\n",
+    "list1 = [12,23,34,43,32,21,56,65,90,10]\n",
+    "list2 = [10,45,65,78,90,99,37,83,92,21]\n",
+    "list1.extend(list2)\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list assignment index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#21\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m numlist[\u001b[38;5;241m10\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a number: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      3\u001b[0m newlist \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m i: i \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m, numlist))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(newlist)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "#21\n",
+    "numlist[10] = int(input('Enter a number: '))\n",
+    "newlist = list(map(lambda i: i ** 2, numlist))\n",
+    "print(newlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#20\n"
+    "2"
    ]
   }
  ],
