--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1236,26 +1236,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list assignment index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#21\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m numlist[\u001b[38;5;241m10\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEnter a number: \u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      3\u001b[0m newlist \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m i: i \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m2\u001b[39m, numlist))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(newlist)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list assignment index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[144, 529, 1156, 484, 5929, 7921, 8100, 5776, 16, 11881]\n"
      ]
     }
    ],
    "source": [
     "#21\n",
-    "numlist[10] = int(input('Enter a number: '))\n",
+    "numlist = [] \n",
+    "for i in range(10):\n",
+    "    num = int(input('Enter a number: '))\n",
+    "    numlist.append(num)\n",
     "newlist = list(map(lambda i: i ** 2, numlist))\n",
     "print(newlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#22\u001b[39;00m\n\u001b[0;32m      2\u001b[0m list_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m85\u001b[39m,\u001b[38;5;241m66\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m14\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m new_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m i: \u001b[38;5;28mstr\u001b[39m(i), list_num))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(new_list)\n",
+      "Cell \u001b[1;32mIn[18], line 3\u001b[0m, in \u001b[0;36m<lambda>\u001b[1;34m(i)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#22\u001b[39;00m\n\u001b[0;32m      2\u001b[0m list_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m85\u001b[39m,\u001b[38;5;241m66\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m14\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m new_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m i: \u001b[38;5;28mstr\u001b[39m(i), list_num))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(new_list)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "#22 error\n",
+    "list_num = [12,23,45,67,85,66,42,23,45,14]\n",
+    "new_list = list(map(lambda i: str(i), list_num))\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[22, 33, 55, 77, 95, 76, 52, 33, 55, 24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#23\n",
+    "list_num = [12,23,45,67,85,66,42,23,45,14]\n",
+    "add_list = list(map(lambda i: i + 10, list_num))\n",
+    "print(add_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['l', 'o', 'g', 't', 'i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#24\n",
+    "str = []\n",
+    "for i in range(5):\n",
+    "    el = input('Enter series name: ')\n",
+    "    str.append(el)\n",
+    "new_str = list(map(lambda i: i[0], str))\n",
+    "print(new_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[307, 296, 323, 338, 285, 278, 283, 330, 373, 315]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#25\n",
+    "temp = [34, 23, 50, 65, 12, 5, 10, 57, 100, 42]\n",
+    "fah = list(map(lambda i: i + 273, temp))\n",
+    "print(fah)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 23, 45, 67, 85, 66, 42, 23, 45, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#26\n",
+    "list_num = ['12','23','45','67','85','66','42','23','45','14']\n",
+    "int_list = list(map(lambda i: int(i),list_num))\n",
+    "print(int_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 2, 4, 7, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#27\n",
+    "name = ['omi','om','shiv','srishti','khushi']\n",
+    "length = list(map(lambda i: len(i), name))\n",
+    "print(length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0, 2.0, 3.0, 4.0, 5.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#28\n",
+    "numberlist = [1,4,9,16,25]\n",
+    "sqroot = list(map(lambda i: i ** (1/2), numberlist))\n",
+    "print(sqroot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2176653236.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[21], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    abs = list(map(lambda i: |i|,neg_list))\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "#29 error\n",
+    "neg_list = [-5,4,-3,-7,5]\n",
+    "abs = list(map(lambda i: i<0,neg_list))\n",
+    "print(abs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['RAM', 'SITA', 'RAAVAN', 'WAR OF LANKA', 'NOVEMBER 9']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#30\n",
+    "books = []\n",
+    "for b in range(5):\n",
+    "    book = input('Enter a book name: ')\n",
+    "    books.append(book)\n",
+    "up = list(map(lambda i: i.upper(), books))\n",
+    "print(up)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34, 12, 56, 66, 66, 78]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#31\n",
+    "user = []\n",
+    "for i in range(10):\n",
+    "    each = int(input('Enter a number: '))\n",
+    "    user.append(each)\n",
+    "even = list(filter(lambda i: i%2==0, user))\n",
+    "print(even)"
    ]
   },
   {
@@ -1263,9 +1477,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "2"
-   ]
+   "source": []
   }
  ],
  "metadata": {
