--- a/practice.ipynb
+++ b/practice.ipynb
@@ -924,23 +924,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['file1.img', 'file2.img', 'file3.img']\n"
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m filename \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile1.img\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile2.img\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile3.img\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile4.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile5.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile6.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m filename:\n\u001b[1;32m----> 4\u001b[0m     filename\u001b[38;5;241m.\u001b[39mremove(i\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.img\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(filename)\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
      ]
     }
    ],
    "source": [
     "#6 error\n",
     "filename = ['file1.img', 'file2.img', 'file3.img', 'file4.jpg', 'file5.jpg', 'file6.jpg']\n",
-    "f = lambda i: i.endswith('.img')\n",
-    "clean_name = list(filter(f,filename))\n",
-    "print(clean_name)"
+    "for i in filename:\n",
+    "    filename.remove(i.endswith('.img'))\n",
+    "print(filename)"
    ]
   },
   {
@@ -1259,24 +1263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#22\u001b[39;00m\n\u001b[0;32m      2\u001b[0m list_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m85\u001b[39m,\u001b[38;5;241m66\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m14\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m new_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m i: \u001b[38;5;28mstr\u001b[39m(i), list_num))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(new_list)\n",
-      "Cell \u001b[1;32mIn[18], line 3\u001b[0m, in \u001b[0;36m<lambda>\u001b[1;34m(i)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#22\u001b[39;00m\n\u001b[0;32m      2\u001b[0m list_num \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m12\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m67\u001b[39m,\u001b[38;5;241m85\u001b[39m,\u001b[38;5;241m66\u001b[39m,\u001b[38;5;241m42\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m45\u001b[39m,\u001b[38;5;241m14\u001b[39m]\n\u001b[1;32m----> 3\u001b[0m new_list \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m i: \u001b[38;5;28mstr\u001b[39m(i), list_num))\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(new_list)\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['12', '23', '45', '67', '85', '66', '42', '23', '45', '14']\n"
      ]
     }
    ],
    "source": [
-    "#22 error\n",
+    "#22\n",
     "list_num = [12,23,45,67,85,66,42,23,45,14]\n",
     "new_list = list(map(lambda i: str(i), list_num))\n",
     "print(new_list)"
@@ -1407,22 +1406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2176653236.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[21], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    abs = list(map(lambda i: |i|,neg_list))\u001b[0m\n\u001b[1;37m                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 7, 5]\n"
      ]
     }
    ],
    "source": [
-    "#29 error\n",
+    "#29\n",
     "neg_list = [-5,4,-3,-7,5]\n",
-    "abs = list(map(lambda i: i<0,neg_list))\n",
+    "abs = list(map(lambda i: abs(i),neg_list))\n",
     "print(abs)"
    ]
   },
@@ -1470,6 +1468,242 @@
     "    user.append(each)\n",
     "even = list(filter(lambda i: i%2==0, user))\n",
     "print(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'elderberry', 'orange']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#32\n",
+    "fruits = []\n",
+    "for i in range(5):\n",
+    "    el = input('Enter a fruit name: ')\n",
+    "    fruits.append(el.lower())\n",
+    "f = lambda i: i.startswith('a') or i.startswith('e') or i.startswith('i') or i.startswith('o') or i.startswith('u') \n",
+    "vow_start = list(filter(f,fruits))\n",
+    "print(vow_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lucknow', 'jodhpur', 'kanpur']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#33\n",
+    "places = []\n",
+    "for p in range(5):\n",
+    "    city = input('Enter a city: ')\n",
+    "    places.append(city)\n",
+    "new_places = list(filter(lambda i: len(i)>5, places))\n",
+    "print(new_places)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12, 34, 0, 54, 4, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#34\n",
+    "num = []\n",
+    "for i in range(10):\n",
+    "    n = int(input('Enter a number: '))\n",
+    "    num.append(n)\n",
+    "new_num = list(filter(lambda i: i>-1, num))\n",
+    "print(new_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kwjkjkj2qwe', 'wsadsf']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#35 error\n",
+    "animal = []\n",
+    "for a in range(5):\n",
+    "    ani = input('Enter an animal name: ')\n",
+    "    animal.append(ani)\n",
+    "new_animal = list(filter(lambda i: i.find('e'), animal))\n",
+    "print(new_animal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'extend'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m    list2\u001b[38;5;241m.\u001b[39mappend(b)\n\u001b[0;32m     11\u001b[0m a \u001b[38;5;241m=\u001b[39m main_list\u001b[38;5;241m.\u001b[39mextend(list1)\n\u001b[1;32m---> 12\u001b[0m b \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m.\u001b[39mextend(list2)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(main_list)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'extend'"
+     ]
+    }
+   ],
+   "source": [
+    "#36 error\n",
+    "main_list = []\n",
+    "list1 = []\n",
+    "list2 = []\n",
+    "for i in range(3):\n",
+    "   a = int(input('Enter a number: '))\n",
+    "   list1.append(a)\n",
+    "for j in range(3):\n",
+    "   b = int(input('Enter a number: '))\n",
+    "   list2.append(b)\n",
+    "a = main_list.extend(list1)\n",
+    "b = a.extend(list2)\n",
+    "print(main_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['t', 'o', 'y'], ['c', 'a', 'r'], ['b', 'i', 'k', 'e'], ['p', 'e', 'n'], ['p', 'e', 'n', 'c', 'i', 'l']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#37\n",
+    "things = []\n",
+    "for i in range(5):\n",
+    "    el = input('Enter a non-living thing: ')\n",
+    "    things.append(list(el))\n",
+    "nested_list = list(map(lambda j: list(j), things))\n",
+    "print(nested_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#38\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['e', 'p', 'l', 'a'], ['n', 'a', 'b'], ['e', 'h', 'y', 'c', 'r']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#39\n",
+    "fruit = []\n",
+    "for i in range(3):\n",
+    "    f = input('Enter a fruit: ')\n",
+    "    fruit.append(f)\n",
+    "uni = list(map(lambda i: list(set(i)), fruit))\n",
+    "print(uni)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#40\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#41 error\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreverse_list\u001b[39m(nums: List[\u001b[38;5;28mint\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[\u001b[38;5;28mint\u001b[39m]:\n\u001b[0;32m      3\u001b[0m     rev \u001b[38;5;241m=\u001b[39m nums[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rev\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#41 error\n",
+    "def reverse_list(nums: List[int]) -> List[int]:\n",
+    "    rev = nums[::-1]\n",
+    "    return rev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'reverse_list' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m reverse \u001b[38;5;241m=\u001b[39m reverse_list([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m])\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'reverse_list' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "reverse = reverse_list([1,2,3,4,5])\n",
+    "print(reverse)"
    ]
   },
   {
