numpy and list prac ques, pandas row and column selection, filter and query operations

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -924,27 +924,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m filename \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile1.img\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile2.img\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile3.img\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile4.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile5.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfile6.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m filename:\n\u001b[1;32m----> 4\u001b[0m     filename\u001b[38;5;241m.\u001b[39mremove(i\u001b[38;5;241m.\u001b[39mendswith(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.img\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(filename)\n",
-      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['file4.jpg', 'file5.jpg', 'file6.jpg']\n"
      ]
     }
    ],
    "source": [
-    "#6 error\n",
+    "#6\n",
     "filename = ['file1.img', 'file2.img', 'file3.img', 'file4.jpg', 'file5.jpg', 'file6.jpg']\n",
-    "for i in filename:\n",
-    "    filename.remove(i.endswith('.img'))\n",
-    "print(filename)"
+    "clean_file = list(filter(lambda i: not i.endswith('.img'),filename))\n",
+    "print(clean_file)"
    ]
   },
   {
@@ -1542,46 +1537,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['kwjkjkj2qwe', 'wsadsf']\n"
+      "['donkey', 'monkey', 'elephant']\n"
      ]
     }
    ],
    "source": [
-    "#35 error\n",
+    "#35\n",
     "animal = []\n",
     "for a in range(5):\n",
     "    ani = input('Enter an animal name: ')\n",
     "    animal.append(ani)\n",
-    "new_animal = list(filter(lambda i: i.find('e'), animal))\n",
+    "new_animal = list(filter(lambda i: i.count('e') > 0, animal))\n",
     "print(new_animal)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'extend'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m    list2\u001b[38;5;241m.\u001b[39mappend(b)\n\u001b[0;32m     11\u001b[0m a \u001b[38;5;241m=\u001b[39m main_list\u001b[38;5;241m.\u001b[39mextend(list1)\n\u001b[1;32m---> 12\u001b[0m b \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m.\u001b[39mextend(list2)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(main_list)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'extend'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 4], [2, 5], [3, 6]]\n"
      ]
     }
    ],
    "source": [
-    "#36 error\n",
+    "#36\n",
     "main_list = []\n",
     "list1 = []\n",
     "list2 = []\n",
@@ -1591,8 +1582,9 @@
     "for j in range(3):\n",
     "   b = int(input('Enter a number: '))\n",
     "   list2.append(b)\n",
-    "a = main_list.extend(list1)\n",
-    "b = a.extend(list2)\n",
+    "for k in range(3):\n",
+    "   ml = [list1[k],list2[k]]\n",
+    "   main_list.append(ml)\n",
     "print(main_list)"
    ]
   },
@@ -1621,11 +1613,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1], [2, 4], [3, 9], [4, 16], [5, 25]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#38\n"
+    "#38\n",
+    "num = []\n",
+    "for i in range(5):\n",
+    "    n = int(input('Enter a number: '))\n",
+    "    num.append(n)\n",
+    "sq = list(map(lambda i: [i, i**2],num))\n",
+    "print(sq)"
    ]
   },
   {
@@ -1657,47 +1663,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#40\n"
+    "#40 error\n",
+    "number = []\n",
+    "fact = []\n",
+    "for i in range(5):\n",
+    "    nb = int(input('Enter a number: '))\n",
+    "    number.append(nb)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'List' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#41 error\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreverse_list\u001b[39m(nums: List[\u001b[38;5;28mint\u001b[39m]) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m List[\u001b[38;5;28mint\u001b[39m]:\n\u001b[0;32m      3\u001b[0m     rev \u001b[38;5;241m=\u001b[39m nums[::\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m rev\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'List' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#41 error\n",
-    "def reverse_list(nums: List[int]) -> List[int]:\n",
+    "#41\n",
+    "def reverse_list(nums):\n",
     "    rev = nums[::-1]\n",
     "    return rev"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'reverse_list' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m reverse \u001b[38;5;241m=\u001b[39m reverse_list([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m])\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(reverse)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'reverse_list' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
      ]
     }
    ],
@@ -1707,11 +1702,192 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1\n",
+    "b = np.zeros(10)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2\n",
+    "c = np.ones(10)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 3 8]\n",
+      " [6 0 2]\n",
+      " [2 6 7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3\n",
+    "m = np.random.randint(0,9, (3,3))\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 8 7 6 5 4 3 2 1 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4\n",
+    "arr = np.array([0,1,2,3,4,5,6,7,8,9])\n",
+    "print(arr[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1,  3,  5,  7,  9, 11, 13, 15, 17, 19])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#5\n",
+    "np.arange(1,20,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "4.5\n",
+      "2.87\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6\n",
+    "arr = np.array([0,1,2,3,4,5,6,7,8,9])\n",
+    "print(sum(arr))\n",
+    "print(arr.mean())\n",
+    "print(f'{arr.std():.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[41 80 87 60 67]\n",
+      " [62 84  1 28 63]\n",
+      " [10  0 21 97 10]\n",
+      " [73  7 64 68 17]\n",
+      " [48 48 23 54 16]]\n",
+      "0\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "#7\n",
+    "matrix = np.random.randint(0,100, (5,5))\n",
+    "print(matrix)\n",
+    "print(matrix.min())\n",
+    "print(matrix.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#8\n"
+   ]
   }
  ],
  "metadata": {
