--- a/data analysis/pandas.ipynb
+++ b/data analysis/pandas.ipynb
@@ -309,11 +309,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### column selection\n",
+    "### single column selection\n",
     "- dictionary like selection\n",
     "    - `dataframe['column name]`\n",
     "- object-like selection\n",
-    "    - `dataframe.column_name`"
+    "    - `dataframe.column_name`\n",
+    "\n",
+    "### multiple column selection\n",
+    "- dictionary like selection\n",
+    "    - `dataframe['list_of_column_names]`"
    ]
   },
   {
