--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1659,27 +1659,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'extend'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[45], line 14\u001b[0m\n\u001b[0;32m     12\u001b[0m     fact\u001b[38;5;241m.\u001b[39mappend(k)\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m j \u001b[38;5;241m==\u001b[39m k:\n\u001b[1;32m---> 14\u001b[0m     ml \u001b[38;5;241m=\u001b[39m ml\u001b[38;5;241m.\u001b[39mextend([j, \u001b[38;5;28mlist\u001b[39m(fact)])\n\u001b[0;32m     15\u001b[0m     main_list\u001b[38;5;241m.\u001b[39mappend(ml)\n\u001b[0;32m     16\u001b[0m     fact \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'extend'"
+     ]
+    }
+   ],
    "source": [
     "#40 error\n",
     "number = []\n",
     "fact = []\n",
+    "main_list = []\n",
+    "ml = []\n",
     "for i in range(5):\n",
     "    nb = int(input('Enter a number: '))\n",
-    "    number.append(nb)\n"
+    "    number.append(nb)\n",
+    "for j in number:\n",
+    "    for k in range(1,j+1):\n",
+    "        if j % k == 0:\n",
+    "            fact.append(k)\n",
+    "        if j == k:\n",
+    "            ml = ml.extend([j, list(fact)])\n",
+    "            main_list.append(ml)\n",
+    "            fact = []\n",
+    "\n",
+    "\n",
+    "print(main_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "#41\n",
     "def reverse_list(nums):\n",
-    "    rev = nums[::-1]\n",
+    "    rev = nums[::-13]\n",
     "    return rev"
    ]
   },
@@ -1724,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1806,7 +1831,7 @@
    "source": [
     "#4\n",
     "arr = np.array([0,1,2,3,4,5,6,7,8,9])\n",
-    "print(arr[::-1])"
+    "print(np.flip(arr))"
    ]
   },
   {
@@ -1882,11 +1907,171 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "ones() got multiple values for argument 'shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#8\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m arr \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m],([\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]),shape\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m))\n",
+      "\u001b[1;31mTypeError\u001b[0m: ones() got multiple values for argument 'shape'"
+     ]
+    }
+   ],
+   "source": [
+    "#8 error\n",
+    "arr = np.ones([1,-1],([1,-1]),shape=(3,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 6 8]\n",
+      " [5 3 9]\n",
+      " [7 0 2]]\n",
+      "[[4 1 7]\n",
+      " [9 6 7]\n",
+      " [3 9 7]]\n",
+      "[[16  6 56]\n",
+      " [45 18 63]\n",
+      " [21  0 14]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#9\n",
+    "m1 = np.random.randint(0,10, (3,3))\n",
+    "print(m1)\n",
+    "m2 = np.random.randint(0,10, (3,3))\n",
+    "print(m2)\n",
+    "print(m1*m2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 4 6 7 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#10\n",
+    "print(np.unique(m2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[63 80 68 45 95]\n",
+      " [72  7 56 74 60]\n",
+      " [ 8 57 69 19 24]\n",
+      " [94 34 51 97  5]\n",
+      " [33 15 66 46 86]]\n",
+      "[[63 68 95]\n",
+      " [72 56 60]\n",
+      " [ 8 69 24]\n",
+      " [94 51  5]\n",
+      " [33 66 86]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11\n",
+    "mtrx = np.random.randint(0,100,(5,5))\n",
+    "print(mtrx)\n",
+    "print(mtrx[:,0::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[72  7 56 74 60]\n",
+      " [94 34 51 97  5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12\n",
+    "print(mtrx[1::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[80 68 45 95]\n",
+      " [ 7 56 74 60]\n",
+      " [57 69 19 24]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13\n",
+    "print(mtrx[:3,1:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[86 46 66 15 33]\n",
+      " [ 5 97 51 34 94]\n",
+      " [24 19 69 57  8]\n",
+      " [60 74 56  7 72]\n",
+      " [95 45 68 80 63]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14 error\n",
+    "print(np.flip(mtrx[0:][:,0:]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#8\n"
+    "#15 error\n"
    ]
   }
  ],
